Fixed list spacing and action font weight issue

--- a/src/lbcamden/elements/_list.scss
+++ b/src/lbcamden/elements/_list.scss
@@ -19,6 +19,7 @@ ul {
 
     li {
       @include govuk-responsive-padding(5, "left");
+      @include govuk-responsive-margin(5, "bottom");
       @include govuk-font(16);
       position: relative;
 
